--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple package for getting full url by clinic domain name",
   "main": "index.js",
   "dependencies": {
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "https": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
