--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "vetmanager-url-getter",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Simple package for getting full url by clinic domain name",
   "main": "index.js",
   "dependencies": {
     "browserify": "^17.0.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "mocha": "^8.2.1",
+    "sync-request": "^6.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha index.test.js"
   },
   "repository": {
     "type": "git",
